[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esm-protein-prediction"
version = "0.1.0"
dependencies = [
    "torch==2.2.0",
    "gradio_molecule3d==0.0.5",
    "accelerate==0.30.1",
    "huggingface_hub==0.19.4",
    "gradio==5.5.0",
    "esm==2.0.0",
    "numpy==1.24.3"
]

[tool.setuptools]
packages = ["src"]